[package]
name = "fitflow_auth"
description = ""
version = "0.0.2"
edition = "2021"
license = "MIT"
homepage = "https://dev.fitflow.app/"
repository = "https://github.com/Fitflow-app/fitflow_auth"
readme = "README"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
reqwest = { version = "0.11.14", optional = true }
serde = { version = "1.0.152", features = ["derive"] }
validator = { version = "0.16.0", features = ["derive"] }

[features]
communication = ["dep:reqwest"]